src/third_party/nasm/travis/test/br3392392.stderr
./travis/test/br3392392.asm:14: error: broadcast not allowed with register operand
